about mr section text alignment fix 02

--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ h1:after {
     display: grid;
     justify-items: center;
     grid-template-columns: 20% 20% 20% 20% 20%;
-    grid-template-rows: 20% 20% 20% 20% 20%;
+    grid-template-rows: 20% 20% 20%;
     grid-gap: 10px;
     padding: 10px;
 }
@@ -121,7 +121,7 @@ div.photo_container {
 .aboutMe_item3 {
     grid-column-start: 2;
     grid-column-end: 5;
-    grid-auto-rows: auto;
+    grid-row-start: -1;
 }
 
 /* MY PHOTOS */
